# fungera

./: .clang-format  .gitignore  App.cpp  App.h  CMakeLists.txt  CMakeLists.txt.user.2fd97af  CMakeLists_boost_example.txt  Cell.h  Memory.cpp  Memory.h  Organism.cpp  Organism.h  Queue.h  README.md  initial_simple_improved.gen  main.cpp
PDCurses/pdcurses/: CMakeLists.txt
cmake/: CompilerWarnings.cmake  PVS-Studio-conf.cmake  Sanitizers.cmake  main-config.cmake
cmake/extra/sanitizers/: FindASan.cmake  FindMSan.cmake  FindSanitizers.cmake  FindTSan.cmake  FindUBSan.cmake
gens/: #rangeJump.gen  initial.gen  initial_jump.gen  initial_simple_improved.gen
libs/PDCurses/: CMakeLists.txt
libs/PDCurses/pdcurses/: CMakeLists.txt
src/: #main.cpp#  #memory.cpp#  App.cpp  App.h  Cell.h  Memory.cpp  Memory.h  Organism.cpp  Organism.h  Queue.h  arr.h  cell.h  main.cpp  mainwindow.cpp  memory.cpp  memory.h  memoryview.cpp  memoryview.h  organism.cpp  organism.h  organismqueue.cpp  organismqueue.h  point.cpp  point.h  statistics.cpp  statistics.h  statuspanel.cpp  statuspanel.h
src/Memory/: Memory.cpp  Memory.h
src/Organism/: Organism.cpp  Organism.h
